[project]
name = "nonebot-plugin-setu-now"
version = "0.6.5.1"
description = "另一个色图插件"
authors = [{ name = "kexue", email = "xana278@foxmail.com" }]
dependencies = [
    "httpx>=0.18.0",
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "pydantic>=2.9.2",
    "pillow>=10.4.0",
    "nonebot-plugin-tortoise-orm>=0.1.0",
    "nonebot-plugin-localstore>=0.5.0",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["nonebot2"]


[project.urls]
homepage = "https://github.com/kexue-z/nonebot-plugin-setu-now"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E402"]
