[project]
name = "nonebot-plugin-setu-now"
version = "0.6.6"
description = "另一个色图插件"
authors = [{ name = "kexue", email = "xana278@foxmail.com" }]
dependencies = [
    "httpx>=0.28.0",
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
    "pydantic>=2.10.3",
    "pillow>=11.0.0",
    "nonebot-plugin-tortoise-orm>=0.1.4",
    "nonebot-plugin-localstore>=0.7.2",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["nonebot2"]


[project.urls]
homepage = "https://github.com/kexue-z/nonebot-plugin-setu-now"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E402"]
